--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/theme-gray.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/theme-gray.css
@@ -1,12 +1,9 @@
 :root {
-    --donate-background: #606e7f;
-    --donate-text: #1b1d1b;
     --template-background: transparent;
     --template-hover-background: #0c0f0b;
     --template-favourite: #2b2b2b;
     --hr-color: #606e7f;
     --border-color: #606e7f;
-    --watermark-color: rgba(96, 110, 127, 0.1);
     --a-color: #00b8d6;
     --sidebar-background: #121510;
     --sidebar-text: #f2f2f2;
@@ -15,14 +12,15 @@
     --support-popup-background: #ffffff;
     --mod-comment-border: #cf3131;
     --sidebar-close-background: rgba(0,0,0,0.7);
-    --unraid-66-color: #FF8C2F;
+    --unraid-66-color: var(--orange-500,#FF8C2F);
     --link-color: #486dba;
-    --startup-color: #FF8C2F;
-    --ca-legacy-background-color: #1d1b1b;
+    --ca-legacy-background-color: var(--background-color,#1d1b1b);
     --search-area-top: 0;
     --search-area-left: 26.5rem;
     --search-area-mobile-left: 7rem;
     --search-area-mobile-top: 0;
+    --menu-background: var(--background-color,#1d1b1b);
+    --menu-opacity: 0.8;
 } 
 
   
