--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -44,7 +44,17 @@ exec("rm $docroot/CA-Logging*.zip");
 
 $diagnosticsFile = htmlspecialchars(str_replace(' ','_',strtolower($var['NAME'])));
 
-if ( $caSettings['maxPerPage'] < 24 ) $caSettings['maxPerPage'] = 24;
+switch ($caSettings['maxPerPage']) {
+  case 12:
+  case 24:
+  case 48:
+  case 96:
+    break;
+  default:
+    $caSettings['maxPerPage'] = 24;
+    break;
+}
+
 
 $firstRun = is_file($caPaths['warningAccepted']) ? "false" : "true";
 $pluginWarning = is_file($caPaths['pluginWarning']) ? "true": "false";
@@ -186,7 +196,7 @@ $noMenu += $themeOffset;
 <? if ( version_compare($unRaidSettings['version'],"7.1.999",">") ):?>
 <style>
 body {
-  overflow-x: hidden!important;
+  overflow-x: hidden !important;
 }
 
 @media (max-width:<?=$doubleRow?>px) {
@@ -203,7 +213,10 @@ body {
   .maxPerPage {
     display: none !important;
   }
-  #Category {
+  .categoryLine {
+    display: none;
+  }
+  .altCategoryLine {
     display: block;
   }
   .multi_installDiv {
@@ -221,6 +234,7 @@ body {
 @media (max-width:<?=$noMenu?>px) {
   body {
     overflow-x: unset !important;
+    width: initial;
   }
   .menuItems {
     display: none;
@@ -243,6 +257,8 @@ body {
   .searchArea {
     margin-left: var(--search-area-mobile-left);
     top: var(--search-area-mobile-top);
+    padding-top:1.5rem;
+    height:4rem;
   }
   .multi_installDiv {
     position: relative;
@@ -250,6 +266,13 @@ body {
   .navigationSection {
     bottom: 0 !important;
     position: relative;
+  }
+  .altCategoryLine {
+    display: none;
+  }
+
+  .categoryLineNoMenu {
+    display: inline-block;
   }
 }
 @media (max-width: 768px) {
@@ -323,7 +346,6 @@ var startupSearch = "<?=$startupSearch?>";
 var iconHoverTimer;
 var wheelActive = false;
 var ca_done_override = false;
-
 // handle 3rd party links on older versions of OS
 <?
 if ( version_compare($unRaidSettings['version'],"7.0.0-rc1","<") ) {
@@ -993,7 +1015,7 @@ $(function(){
   $(".multi_deleteButton").click(function()   { deleteMulti(); });
   $(".multi_installAll").click(function()     { selectAllPrevious(); enableMultiInstall(); });
   $("body").on("click",".startupButton",function() { 
-    $("#Category").html("");
+    $(".category").html("");
     $.cookie("ca_categoryText","",{path:"/;SameSite=Lax"});
     hideAlternateView();
     $(".maxPerPage").hide();
@@ -1266,7 +1288,7 @@ function showSpecials(button) {
   data.selected_category = "DOESNTMATTERWHATSHERE";
   data.section = "AppStore";
   changeCategory(button,false);
-  $("#Category").append(" - <?tr("Installs not allowed from this page");?>");
+  $(".category").append(" - <?tr("Installs not allowed from this page");?>");
 }
 
 function changeCategory(button,subSwitch) {
@@ -1340,7 +1362,7 @@ function doSearch(button,newSearch) {
   scrollToTop();
   if (filter) {
     $("#sortIconArea").show();
-    $("#Category").html(sprintf("<?tr("Search for %s")?>",filter));
+    $(".category").html(sprintf("<?tr("Search for %s")?>",filter));
     data.searchFlag = true;
   } else {
     updateContent();
@@ -1407,9 +1429,28 @@ function getContent(init,category,description,newApp,startupDisplay) {
       category = "NONE";
       initialize = true;
       enableButtons();
-    }
 
-    if ( (category == "New") || (category == "All") ) { category = ""; }
+      var maxHomeApps = 12; // legacy value for 7.1.999 and below
+
+      <? if ( version_compare($unRaidSettings['version'],"7.1.999",">") ):?> 
+        if ( ! $(".spotlightHome").length ) {
+          $("#templates_content").html("<div id='maxHomeApps'><div class='ca_holder spotlightHome' style='display:none;'></div></div>");
+        }
+        // See how many apps will fit maximum on home page
+        var displayWidth = $("#header").getWidth() - $(".menuItems").getWidth();
+        $("#maxHomeApps").show();
+        var appWidth = $(".spotlightHome").getWidth();
+        $("#maxHomeApps").hide();
+        var maxHomeApps = Math.floor(displayWidth / appWidth);
+
+        <? if ( ($display['width'] ?? 0) != 1 ): ?>
+          maxHomeApps = Math.min(maxHomeApps,4);
+        <? endif;?>
+      <? endif;?>
+    }
+    if ( (category == "New") || (category == "All") ) { 
+      category = ""; 
+    }
     var el_dl = $.find(".sortIcons[data-sortby='downloads']");
     var el_tr = $.find(".sortIcons[data-sortby='trending']");
 
@@ -1426,16 +1467,24 @@ function getContent(init,category,description,newApp,startupDisplay) {
       $('.dockerSearch,.templateSearch').hide();
     }
     if ( description && ! filter ) {
-      $("#Category").html(description);
+      $(".category").html(description);
     }
-    post({action:'get_content',filter:filter,category:category,newApp:newApp,startupDisplay:startupDisplay},function(result) {
+    post({action:'get_content',filter:filter,category:category,newApp:newApp,startupDisplay:startupDisplay,maxHomeApps:maxHomeApps},function(result) {
       updateDisplay(result.display);
       if ( initialize ) {
         populateAutoComplete();
         downloadStatistics();
+        if ( maxHomeApps < 3 ) {
+          changeMaxPerPage(12);
+        }
       }
     });
   }
+}
+
+function changeMaxPerPage(max) {
+  postNoSpin({action:"changeMaxPerPage",max:max},function(){
+  });
 }
 
 function downloadStatistics() {
@@ -1504,7 +1553,7 @@ function closeSidebar(cookie=false,visible=false) {
   context.destroy("#actionsPopup");
 
   $(".sidenav").removeClass("sidenavShow").addClass("sidenavHide");
- // $(".ca_display_area").removeClass("dim");
+  $(".ca_display_area").removeClass("dim");
   $("#sidenavContent").html("");
   $(".back_to_top,.move_to_end").removeClass("back_to_top_hide");
   $("body").removeClass("body_sidebarScroll");
@@ -1769,7 +1818,7 @@ function getPrevApps(installed,filter,dontClear) {
         var msg = "<?tr("Action Centre");?>";
         break;
     }
-    $("#Category").html(msg);
+    $(".category").html(msg);
     changeSortOrder(null,null,"true");
     enableMultiInstall();
 
@@ -1943,7 +1992,7 @@ function setPageOne() {
 }
 
 function clearCategory() {
-  $("#Category").html("&nbsp;");
+  $(".category").html("&nbsp;");
   $.cookie("ca_categoryText","",{path:"/;SameSite=Lax"});
 }
 
@@ -1971,7 +2020,7 @@ function pins() {
   clearSearchBox();
   clearCategory();
   showSortIcons();
-  $("#Category").html("<?tr("Pinned Apps");?>");
+  $(".category").html("<?tr("Pinned Apps");?>");
   $(".dockerSearch,.templateSearch,.multi_installDiv").hide();
   post({action:'pinnedApps'},function(result) {
     refreshDisplay();
@@ -2418,7 +2467,7 @@ function updateDisplay(content) {
 
 function saveState() {
   console.log("Save State");
-  $.cookie("ca_categoryText",$("#Category").html(),{path:"/;SameSite=Lax"});
+  $.cookie("ca_categoryText",$(".categoryLine").html(),{path:"/;SameSite=Lax"});
   $.cookie("ca_data",JSON.stringify(data),{path:"/;SameSite=Lax"});
   $.cookie("ca_searchActive",data.searchActive,{path:"/;SameSite=Lax"});
   $.cookie("ca_installMulti",$(".multi_installDiv").is(":visible"),{path:"/;SameSite=Lax"});
@@ -2439,7 +2488,7 @@ function restoreState() {
   console.log("Restore State");
   $.removeCookie("ca_languageSwitch",{path:'/'});
 
-  $("#Category").html($.cookie("ca_categoryText"));
+  $(".category").html($.cookie("ca_categoryText"));
   if ( $.cookie("ca_installMulti") == "true" ) {
     $(".multi_installDiv").show();
   } else {
@@ -2483,14 +2532,12 @@ function restoreState() {
 function showAlternateView() {
   $("#alternateView").show();
   $("body").addClass("body_sidebarScroll");
-  $("body").css("overflow","hidden");
 }
 
 function hideAlternateView() {
   $("#alternateView").hide();
   $("#alternateView,.ca_display_area").removeClass("mobileMenu");
   $("body").removeClass("body_sidebarScroll");
-  $("body").css("overflow","auto");
 }
 
 function showCredits() {
@@ -2508,10 +2555,12 @@ function showStatistics() {
 function showMenu() {
   $('.back_to_top').click();
   $('.menuAdjust').addClass("mobileMenuPopup");
+  $("#templates_content").addClass("dim");
 }
 
 function closeMenu() {
   $('.menuAdjust').removeClass("mobileMenuPopup");
+  $("#templates_content").removeClass("dim");
 }
 
 function caChangeLog() {
@@ -2743,9 +2792,9 @@ function setFavourite(button) {
     },5000);
     $(".favCardBackground").each(function() {
       if ( $(this).data("repository") == data.fav.replace("'","") )
-        $(this).show("slow");
+        $(this).addClass("favCardBackgroundShow").removeClass("favCardBackgroundHide");
       else
-        $(this).hide("slow");
+        $(this).removeClass("favCardBackgroundShow").addClass("favCardBackgroundHide");
     });
     setFavRepoSearch();
   });
@@ -3000,7 +3049,7 @@ function showSidebarApp(apppath,appname) {
   $(".sidebar").fadeIn();
   $(".back_to_top,.move_to_end").addClass("back_to_top_hide");
   $(".sidenav").removeClass("sidenavHide").addClass("sidenavShow");
-  //$(".ca_display_area").addClass("dim");
+  $(".ca_display_area").addClass("dim");
   setTimeout(function() {
     post({action:'getPopupDescription',appName:appname,appPath:apppath},function(result) {
       $("#sidenavContent").html(result.description);
@@ -3073,10 +3122,9 @@ function showRepoPopup(repository) {
   $("#sidenavContent").html("");
 
   $(".sidenav").removeClass("sidenavHide").addClass("sidenavShow");
-  //$(".ca_display_area").addClass("dim");
+  $(".ca_display_area").addClass("dim");
   $(".sidebar").fadeIn();
   $("body").addClass("body_sidebarScroll");
-  $("body").css("overflow","hidden !important");
   $(".nav-user.show").hide();
 
   post({action:'getRepoDescription',repository:repository},function(result) {
@@ -3149,7 +3197,7 @@ function dockerSearch(pageNumber) {
   data.docker = "searching docker";
   $(".dockerSearch,.multi_installDiv").hide();
   $(".templateSearch").show();
-  $("#Category").html(sprintf("<?tr("DockerHub Search for %s")?>",filter)+" <span id='pageNumber'></span>");
+  $(".category").html(sprintf("<?tr("DockerHub Search for %s")?>",filter)+" <span id='pageNumber'></span>");
   post({action:'search_dockerhub',filter:filter,page:pageNumber},function(result) {
     updateDisplay(result.display);
   });
@@ -3196,7 +3244,7 @@ function changeMax(max) {
 }
 
 function getPerPageOpts(value) {
-  var perPage = [24,48,96];
+  var perPage = [12,24,48,96];
   var maxPerPageOpts = [];
   perPage.forEach(function(entry) {
     if ( entry != value ) {
